# xai-model-optimazation

./: README.md  pyproject.toml
src_jax/: data.py  main.py  net.py  state.py  train.py
src_tf/: explain.py  main.ipynb
src_tf/baseline/: fingerprint.pb  keras_metadata.pb  saved_model.pb
src_tf/baseline/variables/: variables.index
src_tf/distilled/: fingerprint.pb  keras_metadata.pb  saved_model.pb
src_tf/distilled/variables/: variables.data-00000-of-00001  variables.index
src_tf/pruned/: fingerprint.pb  keras_metadata.pb  saved_model.pb
src_tf/pruned/variables/: variables.data-00000-of-00001  variables.index
src_tf/reference/: fingerprint.pb  keras_metadata.pb  saved_model.pb
src_tf/reference/variables/: variables.data-00000-of-00001  variables.index
