[project]
name = "xai-model-optimazation"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "FUJISHIGE TEMMA", email = "tenma.x0@gmail.com" }
]
dependencies = ["jax~=0.4.11", "flax~=0.6.10", "tensorflow~=2.12.0", "tensorflow_datasets~=4.9.2", "clu~=0.0.9", "optax~=0.1.5", "shap~=0.41.0", "matplotlib~=3.7.1", "tensorflow-model-optimization~=0.7.5"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff~=0.0.270", "ipykernel~=6.23.1", "pip~=23.1.2"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 180
